# brainstorm-hackathon

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.railway  Makefile  README.md  SUBMISSION.YAML  analysis-backend-protocol.md  analysis-old-frontend.md  analysis-scaffold-integration.md  code.ipynb  debug_pipeline.ipynb  eda.ipynb  flake.nix  middleware.py  middlewareV2.py  progress.md  pyproject.toml  railway.toml  run_middleware.py  start_all.sh  test-report-visual.md  test-report-websocket.md
docs/: getting_started.md
docs/plans/: 2026-06-26-svelte-frontend-migration.md
example_app/: app.js  index.html  style.css
frontend/: .gitignore  app.js  bun.nix  index.html  package-lock.json  package.json  playwright.config.ts  style.css  vite.config.ts
frontend-old/: style.css
frontend/src/: App.css  App.svelte  App.tsx  app.css
frontend/src/components/: CenteringCard.svelte  CoverageCard.svelte  FlowField.tsx  HeatGrid.tsx  HeatmapCanvas.svelte  MoveCard.svelte  Scene.tsx  StatusBar.svelte  TimeSeriesCanvas.svelte
frontend/src/hooks/: useNeuralStream.ts
frontend/src/lib/: analysis.ts  colormap.ts  timeseries-buffer.ts  types.ts  ws.svelte.ts
frontend/src/lib/renderers/: heatmap.ts  timeseries.ts
frontend/tests/: frontend.spec.ts
middleware/: bandpower.py  config.py  featureserver.py  pipeline.py  state.py
nix/: frontend.nix
scripts/: backend.py  control_client.py  download.py  launcher.py  serve.py  signal_processing.py  static_assets.py  stream_data.py
tests/: __init__.py  conftest.py  test_backend.py  test_e2e.py  test_launcher.py  test_lint_config.py  test_packaging.py  test_serve.py  test_signal_processing.py  test_static_assets.py  test_stream_data.py
